# BinaryEqualab

./: .gitignore  1PLAN.md  BinaryMax.md  CMakeLists.txt  FLUTTER_SETUP.md  LICENSE  README.md  REPORTE_Y_PENDIENTES.md  ROADMAP_CAS_14_JUNIO.md  Reporte_Unificado_BinaryEquaLab.md  STITCH_DESIGN_BRIEF.md  build_log.txt  check_users.py  informe.md  main.py  playwright_test.py  pyproject.toml  requirements.txt  test_matrix.py
.agent/scripts/: test_console_parser.py
backend/: .env.example  Dockerfile  README.md  ai_service.py  auth.py  cron.py  cron_reset.sql  force_upgrade.py  main.py  payments.py  pyproject.toml  rate_limiter.py  requirements.txt  result_test.txt  schema.sql  security_utils.py  setup_stripe_products.py  stress_result.txt  stress_test.py  test_hard_math.py  test_matrix_stats.py  test_maxima_connection.py  test_scipy.py  test_stats.py  test_stress_final.py  worker.py  worksheets.py
backend/routers/: cas.py  console_router.py  epicycles.py  graphics.py  medical_data.py  septima.py  statistics.py
backend/services/: ai_explainer.py  clinical_cases.py  clinical_cases_all.py  maxima_service.py  pubmed_service.py  symbolic_explainer.py
binary-cli/: .env  README.md  pyproject.toml
binary-cli/binary_equalab/: __init__.py  cli.py  engine.py  functions.py  geometry.py  giac_poc.py  kimi_service.py  shell_setup.py  sonify.py  tui.py
binary-cli/binary_equalab/services/: kimi_service.py
binary-desktop/: README.md  requirements.txt
binary-desktop/src/: main.py
binary-desktop/src/core/: cloud.py  context.py
binary-desktop/src/ui/: cloud_view.py  console.py  epicycles.py  equations.py  financial.py  graphics.py  keypad.py  matrix.py  statistics.py  vectors.py
binary-equalab/: .env  .env.production  App.tsx  CalculatorContext.tsx  README.md  index.css  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  types.ts  vite.config.ts
binary-equalab/components/: AIResponseRenderer.tsx  AccountingMode.tsx  AuthModal.tsx  ComplexMode.tsx  ConsoleMode.tsx  Dashboard.tsx  EpicyclesPRO.tsx  EquationsMode.tsx  GraphingMode.tsx  LandingPage.tsx  MathDisplay.tsx  MathKeyboardPRO.tsx  MathPreview.tsx  MatrixMode.tsx  MedicalReasoningPanel.tsx  ModoElectrico.tsx  PTISimulator.tsx  PatientCard.tsx  PlanBadge.tsx  PlateletsGraph.tsx  ScientificKeypad.tsx  SettingsModal.tsx  Sidebar.tsx  StandardGraphing.tsx  StatisticsMode.tsx  TopBar.tsx  TreatmentSelector.tsx  UpgradeModal.tsx  VectorsMode.tsx
binary-equalab/config/: mathActions.ts
binary-equalab/contexts/: AuthContext.tsx  NotificationContext.tsx
binary-equalab/hooks/: usarAutocompletado.ts  useExpression.ts
binary-equalab/services/: MathService.ts  apiService.ts  constantesIngenieria.ts  functionDefs.ts  mathParser.ts
binary-equalab/src-tauri/: tauri.conf.json
binary-equalab/tests/: binary-modes.spec.ts
binary-equalab/types/: mathTokens.ts
binary-mobile/: .flutter-plugins-dependencies  pubspec.yaml
binary-mobile-rn/: App.tsx  TROUBLESHOOTING.md  app.json  package-lock.json  package.json
binary-mobile-rn/src/components/: HistoryList.tsx  MathKeyboard.tsx  MathPreview.tsx
binary-mobile-rn/src/config/: mathActions.ts
binary-mobile-rn/src/contexts/: CalculatorContext.tsx
binary-mobile-rn/src/screens/: CalculatorScreen.tsx
binary-mobile-rn/src/services/: apiService.ts
binary-mobile-rn/src/theme/: colors.ts
binary-mobile-rn/src/types/: types.ts
binary-mobile/.dart_tool/: package_config.json  package_graph.json  version
binary-mobile/.dart_tool/extension_discovery/: vs_code.json
binary-mobile/android/: local.properties
binary-mobile/android/app/: build.gradle
binary-mobile/android/app/src/main/: AndroidManifest.xml
binary-mobile/android/app/src/main/kotlin/com/aldra/binaryequalab/: MainActivity.kt
binary-next/: package.json
binary-next/src/app/: layout.tsx  page.tsx  providers.tsx
binary-next/src/app/dashboard/: page.tsx
binary-next/src/components/: AIResponseRenderer.tsx  AccountingMode.tsx  App.tsx  AuthModal.tsx  ConsoleMode.tsx  Dashboard.tsx  EpicyclesPRO.tsx  EquationsMode.tsx  GraphingMode.tsx  LandingPage.tsx  MathDisplay.tsx  MathKeyboardPRO.tsx  MathPreview.tsx  MatrixMode.tsx  MedicalReasoningPanel.tsx  ModoComplejo.tsx  ModoElectrico.tsx  PTISimulator.tsx  PatientCard.tsx  PlanBadge.tsx  PlateletsGraph.tsx  ScientificKeypad.tsx  SettingsModal.tsx  Sidebar.tsx  StandardGraphing.tsx  StatisticsMode.tsx  TopBar.tsx  TreatmentSelector.tsx  UpgradeModal.tsx  VectorsMode.tsx
binary-next/src/config/: mathActions.ts
binary-next/src/contexts/: AuthContext.tsx  CalculatorContext.tsx  NotificationContext.tsx
binary-next/src/hooks/: usarAutocompletado.ts  useExpression.ts  usePlan.ts
binary-next/src/locales/: es-MX.ts
binary-next/src/services/: CommandAutocompleteService.ts  CommandParserService.ts  MathService.ts  apiService.ts  easterEggs.ts  functionDefs.ts  mathParser.ts
build-engine/: CMakeCache.txt
build-v3/: CMakeCache.txt
engine/: CMakeLists.txt  README.md  compile_error.txt  cosas.md  find_ginac.py  setup.py
engine/include/: ode.hpp  ode_solvers.hpp
engine/include/equacore/: calculus.hpp  expression.hpp  stats.hpp  symbolic.hpp
engine/python/equacore/: __init__.py  _equacore.cp311-win_amd64.pyd  _equacore.cp314-win_amd64.pyd
engine/src/: bindings.cpp  calculus.cpp  expression.cpp  fft.cpp  numeric.cpp  ode.cpp  ode_solvers.cpp  sparse.cpp  stats.cpp  symbolic.cpp
engine/tests/: test_pti.py
include/binary/: calculus.hpp  expression.hpp  linear.hpp  ode.hpp
src/: calculus.cpp  expression.cpp  linear.cpp  main.cpp  ode.cpp
src/core/: engine.py
src/ui/: keypad.py  main_window.py  styles.py
src/utils/: math_parser.py
tests/: CMakeLists.txt  test_all.cpp
